samples/_failures_safe/1761356400_da8cc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0db32f69.c: In function ‘main’:
./samples/SAFE/__tmp_0db32f69.c:152:55: error: expected ‘)’ at end of input
  152 |     if (decompressed.size != input_len || memcmp(input
      |                                                 ~     ^
      |                                                       )
./samples/SAFE/__tmp_0db32f69.c:152:43: error: too few arguments to function ‘memcmp’
  152 |     if (decompressed.size != input_len || memcmp(input
      |                                           ^~~~~~
In file included from ./samples/SAFE/__tmp_0db32f69.c:4:
/usr/include/string.h:64:12: note: declared here
   64 | extern int memcmp (const void *__s1, const void *__s2, size_t __n)
      |            ^~~~~~
./samples/SAFE/__tmp_0db32f69.c:152:5: error: expected declaration or statement at end of input
  152 |     if (decompressed.size != input_len || memcmp(input
      |     ^~
